# strlist_cmp

./: main.c  main.h
src/: GPATH  GRTAGS  GTAGS  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  core  test_main  test_main.c
src/.deps/: main.Po  testRunner.Po  test_main.Po
src/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
